--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://apis.google.com/js/api.js"></script>
     <title>Biblioteca machado</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -37,12 +38,11 @@
     <section class="conteudo-introducao" id="servicos">
         <div class="flex-container">
         <h2 class="titulo">Biblioteca Pública Municipal</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris scelerisque consectetur sapien condimentum accumsan. Donec id justo id est pretium cursus sed vitae nisi. In ac efficitur purus. Sed aliquet turpis a diam bibendum, non pulvinar risus maximus. 
-            Suspendisse id sapien viverra, finibus ipsum quis, hendrerit nunc. Fusce sodales turpis id sapien posuere, quis scelerisque urna pretium. Mauris eget elit risus.
-            Donec non risus vitae risus scelerisque efficitur. Aenean massa mi, malesuada semper pharetra suscipit, sagittis ut sapien. Vivamus pharetra nisl eget vestibulum vehicula. </p>
+        <p id="servicos_paragrafo"></p>
         </div>
     </section>
 
-    
+    <script src="script.js"></script>
+    <script src="conection.js"></script>
 </body>
 </html>
