add section event

--- a/index.html
+++ b/index.html
@@ -50,6 +50,28 @@
         </div>
     </section>
 
+    <section class="conteudo-white" id="eventos">
+      <div class="flex-container">
+      <h2 class="titulo">VEJA TAMBÉM</h2>
+      <div class="flex-container-row">
+        <div class="box-evento">
+          <h2 class="titulo-evento">Evento</h2>
+          <p class="texto-evento">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate enim leo, a bibendum.</p>
+          <a href="#" target="_blank" class="evento-saiba-mais">SAIBA MAIS</a>
+        </div>
+        <div class="box-evento">
+          <h2 class="titulo-evento">Feriados</h2>
+          <p class="texto-evento">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate enim leo, a bibendum.</p>
+          <a href="#" target="_blank" class="evento-saiba-mais">SAIBA MAIS</a>
+        </div>
+        <div class="box-evento">
+          <h2 class="titulo-evento">ESG</h2>
+          <p class="texto-evento">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate enim leo, a bibendum.</p>
+          <a href="#" target="_blank" class="evento-saiba-mais">SAIBA MAIS</a>
+        </div>
+      </div>
+      </div>
+    </section>
 
 
     <footer>
