galery slide photo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://apis.google.com/js/api.js"></script>
     <title>Biblioteca machado</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="faq.css">
 </head>
@@ -110,14 +111,23 @@
       </div>
     </section>
 
-    <!--
-    <section class="conteudo-white" id="doacao">
-        <div class="flex-container">
-        <h2 class="titulo">Doação de Livro</h2>
-        <p id="doacao_paragrafo"></p>
+    <section class="conteudo-white">
+      <div class="flex-container">
+        <h2 class="titulo">GALERIA DE FOTOS</h2>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="assets/img_slides/slide-02.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img_slides/slide-03.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img_slides/slide-04.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img_slides/slide-05.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img_slides/slide-06.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img_slides/slide-08.jpeg" alt=""></div>
+          </div>
         </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
     </section>
-  -->
 
     <section class="conteudo-white" id="eventos">
       <div class="flex-container">
@@ -240,6 +250,7 @@
 
 
     <script src="conection.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
     
 </body>
